--- a/index.html
+++ b/index.html
@@ -462,7 +462,6 @@
                                                      <a href="documents/docx/Chapter-4-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 4</a> 
                                                 </li>
                                             </ul>
-                                             
                                         </div>
                                     </div>
                                 </div>
@@ -826,7 +825,7 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                             <ul class="module-list">
+                                            <ul class="module-list">
                                                 <li class="module-item">
                                                     <p>------</p>
                                                     <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
@@ -834,6 +833,15 @@
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                      <a href="documents/docx/Chapter-1-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
+                                                </li>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-2-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 2</a> 
+                                                </li>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-3-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 3</a> 
+                                                </li>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-4-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 4</a> 
                                                 </li>
                                             </ul>
                                         </div>
@@ -905,6 +913,15 @@
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                      <a href="documents/docx/Chapter-1-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 1</a> 
+                                                </li>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-2-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 2</a> 
+                                                </li>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-3-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 3</a> 
+                                                </li>
+                                                <li class="module-item">
+                                                     <a href="documents/docx/Chapter-4-ITNET02.docx" target="_blank"><i class="fa-regular fa-file-word"></i>Chapter 4</a> 
                                                 </li>
                                             </ul>
                                         </div>
