--- a/index.html
+++ b/index.html
@@ -377,6 +377,9 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
                                                 </li>
+                                                 <li class="module-item">
+                                                    <a href="documents/pdfs/Module-2-Creating-Your-First-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 2</a>
+                                                </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
@@ -522,9 +525,12 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                            <ul class="module-list">
+                                             <ul class="module-list">
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
+                                                </li>
+                                                 <li class="module-item">
+                                                    <a href="documents/pdfs/Module-2-Creating-Your-First-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 2</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -601,9 +607,12 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                            <ul class="module-list">
+                                             <ul class="module-list">
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
+                                                </li>
+                                                 <li class="module-item">
+                                                    <a href="documents/pdfs/Module-2-Creating-Your-First-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 2</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
