--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
                                         <div class="dropdown-menu">
                                             <ul class="module-list">
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                    <a href="documents/pdfs/CC102-ver6.9Jan2024.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>CC-102</a> 
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -303,8 +302,7 @@
                                         <div class="dropdown-menu">
                                             <ul class="module-list">
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                    <a href="documents/pdfs/CC102-ver6.9Jan2024.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>CC-102</a> 
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -684,8 +682,7 @@
                                         <div class="dropdown-menu">
                                             <ul class="module-list">
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                    <a href="documents/pdfs/CC102-ver6.9Jan2024.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>CC-102</a> 
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
