--- a/index.html
+++ b/index.html
@@ -1240,20 +1240,16 @@
                                 <button class="close-sat-1 remove"><span class="material-symbols-outlined">close</span></button>
                             </div>
                             <div class="sat-1-body content-body">
-                                <div class="topic-body" data-reminder-id="reminder-14">
+                                <div class="topic-body">
                                     <ul class="topic-list">
-                                        <li class="topic-item text-to-copy" id="sat_1_content"></li>
+                                        <li class="topic-item id="sat_1_content"></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="content-body-buttons">
-                                <button class="copy-text-button" data-reminder="reminder-14">
-                                    <i class="fa-solid fa-clipboard"></i> Copy Text
-                                </button>
                                 <button class="help-button">
                                     <!-- PRO messenger link -->
-                                    <a href="https://m.me/" target="_blank"><i
-                                            class="fas fa-question-circle"></i></a>
+                                    <a href="https://m.me/leerossapan" target="_blank"><span class="material-symbols-outlined">contact_support</span></a>
                                 </button>
                             </div>
                             <div class="fade-text">
