--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="president">
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="200">
-                <img src="assets/images/officer1_lazy.webp" data-src="assets/images/officer1.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer1.webp" data-src="assets/images/officer1.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>PRESIDENT</h3>
                     <p>AJ Capule</p>
@@ -130,7 +130,7 @@
         <div class="team">
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="300">
-                <img src="assets/images/officer2_lazy.webp" data-src="assets/images/officer2.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer2.webp" data-src="assets/images/officer2.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>VICE PRESIDENT</h3>
                     <p>Marnie Shynne Clamonte</p>
@@ -138,7 +138,7 @@
             </div>
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="400">
-                <img src="assets/images/officer3_lazy.webp" data-src="assets/images/officer3.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer3.webp" data-src="assets/images/officer3.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>SECRETARY</h3>
                     <p>Michaella Nicole Ramos</p>
@@ -146,7 +146,7 @@
             </div>
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="500">
-                <img src="assets/images/officer4_lazy.webp" data-src="assets/images/officer4.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer4.webp" data-src="assets/images/officer4.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>AUDITOR</h3>
                     <p>Sarrah Quijano</p>
@@ -154,7 +154,7 @@
             </div>
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="600">
-                <img src="assets/images/officer5_lazy.webp" data-src="assets/images/officer5.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer5.webp" data-src="assets/images/officer5.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>TREASURER</h3>
                     <p>Jonrey Apan</p>
@@ -162,8 +162,7 @@
             </div>
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="700">
-                <!-- <img src="images/officer6_lazy.webp" data-src="images/officer6.webp" alt="" class="lazy-load"> -->
-                <img src="assets/images/officercard - Copy.png" data-src="assets/images/officercard - Copy.png" alt="" class="lazy-load">
+                <img src="images/officer6.webp" data-src="images/officer6.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>BUSINESS <br>MANAGER</h3>
                     <p>Jubelle Salvador</p>
@@ -171,7 +170,7 @@
             </div>
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="800">
-                <img src="assets/images/officer7_lazy.webp" data-src="assets/images/officer7.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer7.webp" data-src="assets/images/officer7.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>P.R.O.</h3>
                     <p>Lee Ross Gonzales</p>
