--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="700">
-                <img src="images/officer6.webp" data-src="images/officer6.webp" alt="" class="lazy-load">
+                <img src="assets/images/officer6.webp" data-src="assets/images/officer6.webp" alt="" class="lazy-load">
                 <div class="officer-details">
                     <h3>BUSINESS <br>MANAGER</h3>
                     <p>Jubelle Salvador</p>
