--- a/index.html
+++ b/index.html
@@ -371,11 +371,14 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <ul class="module-list">
-                                                <li class="module-item">
+                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
                                                 </li>
-                                                 <li class="module-item">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Module-2-Creating-Your-First-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Module-3-Improving-the-Appearance-of-Your-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -523,11 +526,14 @@
                                         </button>
                                         <div class="dropdown-menu">
                                              <ul class="module-list">
-                                                <li class="module-item">
+                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
                                                 </li>
-                                                 <li class="module-item">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Module-2-Creating-Your-First-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Module-3-Improving-the-Appearance-of-Your-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -608,8 +614,11 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
                                                 </li>
-                                                 <li class="module-item">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Module-2-Creating-Your-First-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Module-3-Improving-the-Appearance-of-Your-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -1145,7 +1154,11 @@
                                             <ul class="module-list">
                                                 <li class="module-item">
                                                     <p>------</p>
-                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                    <a href="documents/pdfs/GE1-Unit-1-Lesson-1.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Lesson 1</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <p>------</p>
+                                                    <a href="documents/pdfs/GE1-Unit-1-Lesson-2.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Lesson 2</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
