--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                         </div>
                         <div class="sub-card-bottom">
                             <div class="sub-card-bottom-left">
-                                <p>--------------------</p>
+                                <p>Batungbakal, Joanna Joy</p>
                             </div>
                             <div class="sub-card-bottom-right">
                                 <button class="btnn w_3 schedbutton">Open <span class="material-symbols-outlined">navigate_next</span>
@@ -1060,7 +1060,7 @@
                         </div>
                         <div class="sub-card-bottom">
                             <div class="sub-card-bottom-left">
-                                <p>------</p>
+                                <p>Cabacungan, Niña A.</p>
                             </div>
                             <div class="sub-card-bottom-right">
                                 <button class="btnn th_1 schedbutton">Open <span class="material-symbols-outlined">navigate_next</span>
