--- a/index.html
+++ b/index.html
@@ -620,6 +620,12 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-3-Improving-the-Appearance-of-Your-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3</a>
                                                 </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Module-3-Inline-CSS-Additional.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3.2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
+                                                </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
