--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                            <ul class="module-list">
-                                                 <li class="module-item">
+                                             <ul class="module-list">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
                                                 </li>
                                                 <li class="module-item">
@@ -379,6 +379,12 @@
                                                 </li>
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-3-Improving-the-Appearance-of-Your-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Module-3-Inline-CSS-Additional.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3.2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -525,8 +531,8 @@
                                             Files
                                         </button>
                                         <div class="dropdown-menu">
-                                             <ul class="module-list">
-                                                 <li class="module-item">
+                                              <ul class="module-list">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Module-1-Introduction-to-Web-Development.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 1</a>
                                                 </li>
                                                 <li class="module-item">
@@ -534,6 +540,12 @@
                                                 </li>
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Module-3-Improving-the-Appearance-of-Your-Web-Page.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Module-3-Inline-CSS-Additional.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 3.2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
