--- a/index.html
+++ b/index.html
@@ -1019,8 +1019,13 @@
                                         <div class="dropdown-menu">
                                             <ul class="module-list">
                                                 <li class="module-item">
-                                                    <p>------</p>
-                                                    <!-- <a href="documents/pdfs/" target="_blank"><i class="fa-regular fa-file-pdf"></i></a> -->
+                                                    <a href="documents/pdfs/KABANATA 1 - MODYUL 1.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>Module 1</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/KABANATA 1 - MODYUL 2.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>Module 2</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/KABANATA 1 - MODYUL 3.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i>Module 3</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
