--- a/index.html
+++ b/index.html
@@ -386,7 +386,11 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
-                                                <div class="dropdown-divider"></div>
+
+<li class="module-item">
+                                                    <a href="documents/pdfs/Laboratories-for-Module-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 4</a>
+                                                </li>
+                                              <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
                                                     <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
@@ -547,7 +551,11 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
-                                                <div class="dropdown-divider"></div>
+
+<li class="module-item">
+                                                    <a href="documents/pdfs/Laboratories-for-Module-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 4</a>
+                                                </li>  
+                                              <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
                                                     <!-- <a href="documents/docx/" target="_blank"><i class="fa-regular fa-file-word"></i></a> -->
@@ -637,6 +645,10 @@
                                                 </li>
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
+                                                </li>
+
+<li class="module-item">
+                                                    <a href="documents/pdfs/Laboratories-for-Module-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 4</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
