--- a/index.html
+++ b/index.html
@@ -386,9 +386,14 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
-
-<li class="module-item">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Laboratories-for-Module-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 4</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Lesson-5-Inserting-Images.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 5</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Laboratory-for-Module-5.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 5</a>
                                                 </li>
                                               <div class="dropdown-divider"></div>
                                                 <li class="module-item">
@@ -551,10 +556,15 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
-
-<li class="module-item">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Laboratories-for-Module-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 4</a>
                                                 </li>  
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Lesson-5-Inserting-Images.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 5</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Laboratory-for-Module-5.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 5</a>
+                                                </li>
                                               <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
@@ -646,9 +656,14 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/ITWS-01-Lesson-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 4</a>
                                                 </li>
-
-<li class="module-item">
+                                                <li class="module-item">
                                                     <a href="documents/pdfs/Laboratories-for-Module-4.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 4</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Lesson-5-Inserting-Images.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 5</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Laboratory-for-Module-5.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 5</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
