--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <div class="sub-card-top">
                             <div class="sub-card-top-left">
                                 <p>CODE: <span>IT-WS01</span></p>
-                                <p>Networking 2, Advanced</p>
+                                <p>Web Systems and Technologies 1</p>
                                 <p>M 10:00 AM - 12:00 PM</p>
                                 <p>RM 305</p>
                                 <div id="schedule3" class="schedule"></div>
