--- a/index.html
+++ b/index.html
@@ -395,6 +395,12 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Laboratory-for-Module-5.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 5</a>
                                                 </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/ITWS-01-Lesson-6-Links.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 6</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Laboratory-for-Hyperlinks.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Hyperlinks</a>
+                                                </li>
                                               <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
@@ -565,6 +571,12 @@
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Laboratory-for-Module-5.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 5</a>
                                                 </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/ITWS-01-Lesson-6-Links.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 6</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Laboratory-for-Hyperlinks.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Hyperlinks</a>
+                                                </li>
                                               <div class="dropdown-divider"></div>
                                                 <li class="module-item">
                                                     <p>------</p>
@@ -664,6 +676,12 @@
                                                 </li>
                                                 <li class="module-item">
                                                     <a href="documents/pdfs/Laboratory-for-Module-5.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Module 5</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/ITWS-01-Lesson-6-Links.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Module 6</a>
+                                                </li>
+                                                <li class="module-item">
+                                                    <a href="documents/pdfs/Laboratory-for-Hyperlinks.pdf" target="_blank"><i class="fa-regular fa-file-pdf"></i> Laboratories for Hyperlinks</a>
                                                 </li>
                                                 <div class="dropdown-divider"></div>
                                                 <li class="module-item">
