--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="300">
                 <!-- <img src="assets/images/officer2.webp" data-src="assets/images/officer2.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer2.webp" alt="Vice President" loading="lazy"/>
+                <img src="assets/images/officer2.webp" alt="Vice President" loading="lazy"/>
                 <div class="officer-details">
                     <h3>VICE PRESIDENT</h3>
                     <p>Marnie Shynne Clamonte</p>
@@ -141,7 +141,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="400">
                 <!-- <img src="assets/images/officer3.webp" data-src="assets/images/officer3.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer3.webp" alt="Secretary" loading="lazy"/>
+                <img src="assets/images/officer3.webp" alt="Secretary" loading="lazy"/>
                 <div class="officer-details">
                     <h3>SECRETARY</h3>
                     <p>Michaella Nicole Ramos</p>
@@ -150,7 +150,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="500">
                 <!-- <img src="assets/images/officer4.webp" data-src="assets/images/officer4.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer4.webp" alt="Auditor" loading="lazy"/>
+                <img src="assets/images/officer4.webp" alt="Auditor" loading="lazy"/>
                 <div class="officer-details">
                     <h3>AUDITOR</h3>
                     <p>Sarrah Quijano</p>
@@ -159,7 +159,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="600">
                 <!-- <img src="assets/images/officer5.webp" data-src="assets/images/officer5.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer5.webp" alt="Treasurer" loading="lazy"/>
+                <img src="assets/images/officer5.webp" alt="Treasurer" loading="lazy"/>
                 <div class="officer-details">
                     <h3>TREASURER</h3>
                     <p>Jonrey Apan</p>
@@ -168,7 +168,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="700">
                 <!-- <img src="assets/images/officer6.webp" data-src="assets/images/officer6.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer6.webp" alt="Business Manager" loading="lazy"/>
+                <img src="assets/images/officer6.webp" alt="Business Manager" loading="lazy"/>
                 <div class="officer-details">
                     <h3>BUSINESS <br>MANAGER</h3>
                     <p>Jubelle Salvador</p>
@@ -177,7 +177,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="800">
                 <!-- <img src="assets/images/officer7.webp" data-src="assets/images/officer7.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer7.webp" alt="PRO" loading="lazy"/>
+                <img src="assets/images/officer7.webp" alt="PRO" loading="lazy"/>
                 <div class="officer-details">
                     <h3>P.R.O.</h3>
                     <p>Lee Ross Gonzales</p>
