--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="officer" data-aos="zoom-in-down" data-aos-easing="ease" data-aos-duration="500"
                 data-aos-delay="200">
                 <!-- <img src="assets/images/officer1.webp" data-src="assets/images/officer1.webp" alt="" class="lazy-load"> -->
-                <img src="assets/imgaes/officer1.webp" alt="President" loading="lazy"/>
+                <img src="assets/images/officer1.webp" alt="President" loading="lazy"/>
                 <div class="officer-details">
                     <h3>PRESIDENT</h3>
                     <p>AJ Capule</p>
